--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
+    <meta name="google-site-verification" content="ruvyt314OxiqN6MAgSA_ND0qyIWCq7mYNdZWV_3i2TE" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Erfahre alles über das 'Sub des Tages' bei Subway – wie es funktioniert, welche Vorteile es bietet und wie du das Beste aus dem Angebot herausholen kannst.">
